--- a/about.njk
+++ b/about.njk
@@ -32,6 +32,8 @@ melissa:
 ---
 <h1>About</h1>
 
+<p>The podcast where we make top ten lists about everything!</p>
+
 <div class="about">
     {% list melissa %}
     {% list brian %}
