--- a/index.njk
+++ b/index.njk
@@ -2,12 +2,15 @@
 layout: home
 ---
 
-<p class="headline">The podcast where we make top ten lists about everything!</p>
-
-{% set currentEpisode = collections.episodes | last %}
-<h2>NOW PLAYING</h2>
-{% episodePoster currentEpisode.data.guests, currentEpisode.data.hosts, metadata.host_poster_last_name_offset, currentEpisode.data.number, currentEpisode.data.title, currentEpisode.data.date | setEpisodeReleaseTime | machineDate, currentEpisode.data.date | setEpisodeReleaseTime | readableDate | upper, currentEpisode.data.description, metadata.mp3_cdn_url, currentEpisode.data.page.fileSlug, currentEpisode.data.credits %}
-
-<h2>FEATURED</h2>
-{% set featuredEpisode = collections.featured | last %}
-{% episodePoster featuredEpisode.data.guests, featuredEpisode.data.hosts, metadata.host_poster_last_name_offset, featuredEpisode.data.number, featuredEpisode.data.title, featuredEpisode.data.date | setEpisodeReleaseTime | machineDate, featuredEpisode.data.date | setEpisodeReleaseTime | readableDate | upper, featuredEpisode.data.description, metadata.mp3_cdn_url, featuredEpisode.data.page.fileSlug, featuredEpisode.data.credits %}
+<div class="poster-parent">
+    <div class="poster-container">
+        {% set currentEpisode = collections.episodes | last %}
+        <h2>NOW PLAYING</h2>
+        {% episodePoster currentEpisode.data.guests, currentEpisode.data.hosts, metadata.host_poster_last_name_offset, currentEpisode.data.number, currentEpisode.data.title, currentEpisode.data.date | setEpisodeReleaseTime | machineDate, currentEpisode.data.date | setEpisodeReleaseTime | readableDate | upper, currentEpisode.data.description, metadata.mp3_cdn_url, currentEpisode.data.page.fileSlug, currentEpisode.data.credits %}
+    </div>
+    <div class="poster-container">
+        <h2>FEATURED</h2>
+        {% set featuredEpisode = collections.featured | last %}
+        {% episodePoster featuredEpisode.data.guests, featuredEpisode.data.hosts, metadata.host_poster_last_name_offset, featuredEpisode.data.number, featuredEpisode.data.title, featuredEpisode.data.date | setEpisodeReleaseTime | machineDate, featuredEpisode.data.date | setEpisodeReleaseTime | readableDate | upper, featuredEpisode.data.description, metadata.mp3_cdn_url, featuredEpisode.data.page.fileSlug, featuredEpisode.data.credits %}
+    </div>
+</div>
