--- a/episodes/198-films-2025.njk
+++ b/episodes/198-films-2025.njk
@@ -5,8 +5,8 @@ title: Films 2025
 description: Brian and Melissa share their favorite films that they watched for the first time in 2025. 
 date: 2026-01-30
 hosts:
-  - Brian
-  - Melissa
+  - Brian Koser
+  - Melissa Koser
 bytes: 
 duration: '1:03:42'
 tags:
