--- a/episodes/index.njk
+++ b/episodes/index.njk
@@ -2,11 +2,11 @@
 layout: site
 ---
 <h1>Episodes</h1>
-<div class="episode-list">
-{%- for episode in collections.episodes | reverse -%}
-    <article class="h-entry">
-        <h2><a href="{{ episode.url }}" class="p-name">№ {{ episode.data.number }} {{ episode.data.title }}</a></h2>
-        <p><time class="dt-published" datetime='{{ episode.date | setEpisodeReleaseTime | machineDate }}'>{{ episode.date | setEpisodeReleaseTime | readableDate }}</time> · {{ episode.data.description }}</p>
-    </article>
-{%- endfor -%}
+
+<div class="mini-poster-parent">
+    {%- for episode in collections.episodes | reverse -%}
+        <div class="mini-poster-container">
+            {% episodeMiniPoster episode.data.number, episode.data.title, episode.url %}
+        </div>
+    {%- endfor -%}
 </div>
