--- a/css/site.css
+++ b/css/site.css
@@ -504,11 +504,11 @@ kbd kbd {
     text-decoration: none;
 }
 
-.site-nav.active {
+.site-nav-links.active {
     padding: 1em 0 0 0;
 }
 
-.site-nav a:hover {
+.site-nav-links a:hover {
     background-color: var(--color-secondary);
 }
 
@@ -818,10 +818,14 @@ kbd kbd {
 /*
     MINI POSTER
 */
-.mini-poster-parent {
+main .mini-poster-parent {
   display: flex;
   gap: 1.3em;
   flex-flow: wrap;
+}
+
+nav .mini-poster-parent {
+    margin-left: 1em;
 }
 
 .mini-poster {
