--- a/about.njk
+++ b/about.njk
@@ -13,7 +13,7 @@ brian:
         - Before TTO, discussed starting a board game podcast with a friend in our game group. He went on to work in the board game industry.
         - If ask a stranger if you can call them on the telephone, it's weird. But if you can record the conversation and share it publically on the internet, it's perfectly acceptable.
         - They stopped making good popular music when I was born, at the end of the 1980s.
-        - It doesn't get any cooler than sailing ships, man.
+        - I wouldn't have said Disney's Robin Hood was my favorite as a kid, but I did grow up to love legends, anthropomorphic animals, the middle ages, archery, animation, and folk music.
         
 melissa:
     host: Melissa
