--- a/css/site.css
+++ b/css/site.css
@@ -103,7 +103,9 @@
   font-style: normal;
   font-weight: 700;
   font-display: swap;
-  src: url(https://fonts.gstatic.com/l/font?kit=u-4k0q2lgwslOqpF_6gQ8kELY7pMf-LNpMnYD06yNq9Gqaw&skey=5667eee1d647af21&v=v11) format('woff2');
+  src: 
+    local("Courier Prime"),
+    url("https://s3.amazonaws.com/fonts.koser.us/CourierPrimeBold.woff2") format("woff2");
 }
 
 @font-face {
@@ -111,8 +113,9 @@
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url(https://fonts.gstatic.com/s/lobster/v32/neILzCirqoswsqX9zoKmMw.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+  src:
+    local("Lobster"),
+    url("https://s3.amazonaws.com/fonts.koser.us/Lobster.woff2") format("woff2");
 }
 
 
